<resources>
    <string name="app_name">Ecommerce</string>

    <!-- ==================== LOGIN PAGE ==================== -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_username">No name no game!</string>
    <string name="error_password">8 characters or no deal!</string>

    <!-- ==================== LOGIN PAGE ==================== -->
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>
    <string name="txt_products"> Products List</string>

    <!-- ==================== MENU LABELS ==================== -->
    <string name="featured_label">Featured</string>
    <string name="apartment_label">Apartment</string>
    <string name="accessories_label">Accessories</string>
    <string name="shoes_label">Shoes</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="dresses_label">Dresses</string>
    <string name="account_label">My Account</string>
    <string name="logo_content_description">Logo</string>

    <!-- ==================== SHIP PAGE ==================== -->
    <string name="activity_label">Shipping Address</string>
    <string name="error_string">Field must not be empty.</string>
    <string name="label_name">Name</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_zip">ZIP</string>
    <string name="label_save">Save</string>

</resources>
